--- a/H2/makefile
+++ b/H2/makefile
@@ -1,15 +1,21 @@
 CC = gcc
-
 LOCAL=${HOME}/.local
+LIBDIR=lib
+
 CFLAGS = \
+	 -g \
 	 -pedantic \
 	 -Werror \
 	 -Wall \
-	 -g \
 	 -Iinclude \
-	 -Wl,-rpath,${LOCAL}/lib \
-	 -L${LOCAL}/lib \
-	 -I${LOCAL}/include
+	 -I${LOCAL}/include \
+	 -Isrc/nepc/
+
+LDFLAGS += \
+    -L${LOCAL}/lib \
+    -Llib \
+    -Wl,-rpath,${LOCAL}/lib \
+    -Wl,-rpath,lib
 
 CFLAGS_OPT = \
 	     -O2 \
@@ -18,11 +24,26 @@ CFLAGS_OPT = \
 LIB = \
       -lm \
       -lgsl \
-      -lgslcblas
+      -lgslcblas \
+	  -L$(CURDIR)/lib \
+      -lnep
 
 OBJ = \
       obj/tools.o \
+      obj/lattice.o \
+      obj/potential.o \
       obj/run.o
+
+OBJ_LIB = \
+	obj_nep/nep.o \
+	obj_nep/interface.o
+
+CXXFLAGS = \
+	   -DUSE_TABLE_FOR_RADIAL_FUNCTIONS \
+	   -O3 \
+	   -fPIC \
+	   -std=c++11
+
 MAIN = \
        obj/main.o
 
@@ -33,21 +54,29 @@ else
 CFLAGS += $(CFLAGS_OPT)
 endif
 
-H2: obj _H2
-
-_H2: $(MAIN) $(OBJ)
-	$(CC) $(CFLAGS) $^ -o H2 $(LIB)
+_H1: obj lib H1
 
 obj/%.o: src/%.c
-	$(CC) -MMD -c $(CFLAGS) $< -o $@ 
+	$(CC) -MMD -c $(CFLAGS) $< -o $@
+
+H1: $(MAIN) $(OBJ)
+	$(CC) $(CFLAGS) $^ $(LIB) -o $@
+
+obj_nep/%.o: src/nepc/%.cpp
+	$(CXX) -MMD -c $(CXXFLAGS) $< -o $@
+
+lib: $(OBJ_LIB)
+	$(CXX) -shared $^ -o ${LIBDIR}/libnep.so
 
 obj:
 	mkdir -p obj
+	mkdir -p obj_nep
+	mkdir -p ${LIBDIR}
 
 clean:
-	find -iname "*.o" -exec rm {} \;
-	find -iname "*.d" -exec rm {} \;
-	rm -f H2 run-test
-	rm -rf obj obj_test
+	find . -name "*.o" -exec rm {} \;
+	find . -name "*.d" -exec rm {} \;
+	rm -f H1 run-test
+	rm -rf obj obj_test obj_nep ${LIBDIR}
 
 .PHONY: clean
