--- a/H2/makefile
+++ b/H2/makefile
@@ -133,3 +133,80 @@ clean:
 
 # .PHONY: clean
 
+
+
+
+
+
+
+CC = clang
+
+LIBDIR = ${LOCAL}/lib
+
+
+
+LOCAL = ${HOME}/.local
+CFLAGS = \
+	-pedantic \
+	-Wall \
+	-Werror \
+	-g \
+	-Iinclude \
+	-MMD \
+	-I${LOCAL}/include \
+	-I/opt/homebrew/include \
+	-Isrc \
+
+LDFLAGS = \
+	-Wl,-rpath,/opt/homebrew/lib \
+	-L/opt/homebrew/lib
+
+LIB = \
+	/opt/homebrew/lib/libgsl.dylib \
+	/opt/homebrew/lib/libgslcblas.dylib \
+	-lm
+
+OBJ = \
+      obj/tools.o \
+      obj/run.o
+
+# OBJ_LIB = \
+# 	obj_nep/nep.o \
+# 	obj_nep/interface.o
+
+CXXFLAGS = \
+	   -DUSE_TABLE_FOR_RADIAL_FUNCTIONS \
+	   -O3 \
+	   -fPIC \
+	   -std=c++11
+
+MAIN = \
+       obj/main.o
+
+ifeq ($(MAKECMDGOALS),test)
+OBJ_TEST = $(patsubst obj/%.o,obj_test/%.o,$(OBJ))
+-include unit-test/test.mk
+else
+CFLAGS += $(CFLAGS_OPT)
+endif
+
+_H2: obj H2
+
+obj/%.o: src/%.c
+	$(CC) -MMD -c $(CFLAGS) $< -o $@
+
+H2: $(MAIN) $(OBJ)
+	$(CC) $(CFLAGS) $^ $(LIB) -o $@
+
+
+obj:
+	mkdir -p obj
+	mkdir -p ${LIBDIR}
+
+clean:
+	find . -name "*.o" -exec rm {} \;
+	find . -name "*.d" -exec rm {} \;
+	rm -f H2 run-test
+	rm -rf obj obj_test obj_nep ${LIBDIR}
+
+.PHONY: clean
