--- a/H2/makefile
+++ b/H2/makefile
@@ -27,12 +27,6 @@ LIB = \
 OBJ = \
       obj/tools.o \
 	  obj/run.o
-    #   obj/lattice.o \
-    #   obj/potential.o \
-
-# OBJ_LIB = \
-# 	obj_nep/nep.o \
-# 	obj_nep/interface.o
 
 CXXFLAGS = \
 	   -DUSE_TABLE_FOR_RADIAL_FUNCTIONS \
@@ -58,16 +52,9 @@ obj/%.o: src/%.c
 H2: $(MAIN) $(OBJ)
 	$(CC) $(CFLAGS) $^ $(LIB) -o $@
 
-# obj_nep/%.o: src/nepc/%.cpp
-# 	$(CXX) -MMD -c $(CXXFLAGS) $< -o $@
-
-# lib: $(OBJ_LIB)
-# 	$(CXX) -shared $^ -o ${LIBDIR}/libnep.so
-
 obj:
 	mkdir -p obj
 	mkdir -p obj_nep
-	mkdir -p ${LIBDIR}
 
 clean:
 	find . -name "*.o" -exec rm {} \;
@@ -79,10 +66,10 @@ clean:
 
 
 # ------------------------ JONATANS MAKE ----------------------------------------------
-
 # CC = clang
-
+# LIBDIR = ${LOCAL}/lib
 # LOCAL = ${HOME}/.local
+
 # CFLAGS = \
 # 	-pedantic \
 # 	-Wall \
@@ -91,7 +78,8 @@ clean:
 # 	-Iinclude \
 # 	-MMD \
 # 	-I${LOCAL}/include \
-# 	-I/opt/homebrew/include
+# 	-I/opt/homebrew/include \
+# 	-Isrc \
 
 # LDFLAGS = \
 # 	-Wl,-rpath,/opt/homebrew/lib \
@@ -103,9 +91,21 @@ clean:
 # 	-lm
 
 # OBJ = \
-# 	obj/tools.o
+#       obj/tools.o \
+#       obj/run.o
+
+# # OBJ_LIB = \
+# # 	obj_nep/nep.o \
+# # 	obj_nep/interface.o
+
+# CXXFLAGS = \
+# 	   -DUSE_TABLE_FOR_RADIAL_FUNCTIONS \
+# 	   -O3 \
+# 	   -fPIC \
+# 	   -std=c++11
+
 # MAIN = \
-# 	obj/main.o
+#        obj/main.o
 
 # ifeq ($(MAKECMDGOALS),test)
 # OBJ_TEST = $(patsubst obj/%.o,obj_test/%.o,$(OBJ))
@@ -114,99 +114,23 @@ clean:
 # CFLAGS += $(CFLAGS_OPT)
 # endif
 
-# program: obj _program
-
-# _program: $(MAIN) $(OBJ)
-# 	$(CC) $(CFLAGS) $^ -o program $(LIB)
+# _H2: obj H2
 
 # obj/%.o: src/%.c
-# 	$(CC) -c $(CFLAGS) $< -o $@ 
+# 	$(CC) -MMD -c $(CFLAGS) $< -o $@
+
+# H2: $(MAIN) $(OBJ)
+# 	$(CC) $(CFLAGS) $^ $(LIB) -o $@
+
 
 # obj:
 # 	mkdir -p obj
+# 	mkdir -p ${LIBDIR}
 
 # clean:
-# 	find . -iname "*.o" -exec rm {} \;
-# 	find . -iname "*.d" -exec rm {} \;
-# 	rm -f program run-test
-# 	rm -rf obj obj_test
+# 	find . -name "*.o" -exec rm {} \;
+# 	find . -name "*.d" -exec rm {} \;
+# 	rm -f H2 run-test
+# 	rm -rf obj obj_test obj_nep ${LIBDIR}
 
 # .PHONY: clean
-
-
-
-
-
-
-
-CC = clang
-
-LIBDIR = ${LOCAL}/lib
-
-
-
-LOCAL = ${HOME}/.local
-CFLAGS = \
-	-pedantic \
-	-Wall \
-	-Werror \
-	-g \
-	-Iinclude \
-	-MMD \
-	-I${LOCAL}/include \
-	-I/opt/homebrew/include \
-	-Isrc \
-
-LDFLAGS = \
-	-Wl,-rpath,/opt/homebrew/lib \
-	-L/opt/homebrew/lib
-
-LIB = \
-	/opt/homebrew/lib/libgsl.dylib \
-	/opt/homebrew/lib/libgslcblas.dylib \
-	-lm
-
-OBJ = \
-      obj/tools.o \
-      obj/run.o
-
-# OBJ_LIB = \
-# 	obj_nep/nep.o \
-# 	obj_nep/interface.o
-
-CXXFLAGS = \
-	   -DUSE_TABLE_FOR_RADIAL_FUNCTIONS \
-	   -O3 \
-	   -fPIC \
-	   -std=c++11
-
-MAIN = \
-       obj/main.o
-
-ifeq ($(MAKECMDGOALS),test)
-OBJ_TEST = $(patsubst obj/%.o,obj_test/%.o,$(OBJ))
--include unit-test/test.mk
-else
-CFLAGS += $(CFLAGS_OPT)
-endif
-
-_H2: obj H2
-
-obj/%.o: src/%.c
-	$(CC) -MMD -c $(CFLAGS) $< -o $@
-
-H2: $(MAIN) $(OBJ)
-	$(CC) $(CFLAGS) $^ $(LIB) -o $@
-
-
-obj:
-	mkdir -p obj
-	mkdir -p ${LIBDIR}
-
-clean:
-	find . -name "*.o" -exec rm {} \;
-	find . -name "*.d" -exec rm {} \;
-	rm -f H2 run-test
-	rm -rf obj obj_test obj_nep ${LIBDIR}
-
-.PHONY: clean
